# tgin

./: .gitignore  Cargo.toml  DOCS.md  PERF.md  README.md  tgin.ron
examples/: bot1.py  bot2.py  bot3.py  pyproject.toml
integrations/pytgin/: pyproject.toml
integrations/pytgin/pytgin/: __init__.py  aiogram.py
src/: base.rs  main.rs  main.rs.dump  tgin.rs
src/api/: message.rs  methods.rs  mod.rs  router.rs  schemas.rs
src/config/: schema.rs  setup.rs
src/lb/: all.rs  base.rs  mod.rs  roundrobin.rs
src/mock/: mod.rs  routes.rs
src/route/: base.rs  longpull.rs  mod.rs  webhook.rs
src/update/: base.rs  longpull.rs  webhook.rs
src/utils/: defaults.rs  fun.rs
tests/performance/: BENCHMARKING.md  Dockerfile  benchmark.ab  benchmark.sh  bot.py  docker-compose.yml  makefile  results.csv  tgin.ron
tests/performance/benchmark/: Cargo.toml  Dockerfile
tests/performance/benchmark/src/: main.rs
tests/performance/diagram/: main.go
