[package]
name = "tgin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
ron = "0.12.0"
clap = "4.5.53"
regex = "1.12.2"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
lazy_static = "1.5.0"
rand = "0.9.2"
once_cell = "1.21.3"
serde_urlencoded = "0.7.1"

[dev-dependencies]
wiremock = "0.6.5"
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.3"
