[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytgin"
version = "0.1.0"
description = "tgin integrations for python frameworks"
authors = [
    {name = "chesnok", email = "ChesnokovP1107@yandex.ru"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
