[package]
name = "tgin-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
dashmap = "6"
hdrhistogram = "7"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }